# kafka-python-consumer-example

./: Dockerfile  pyproject.toml  requirements.txt
kafka_python_consumer/: consumer.py
